# historical-b-roll-automator

./: .dockerignore  .gitignore  .wikipedia_image_downloader.ini  CLAUDE.md  Dockerfile  LICENSE  README.md  broll.py  broll_config.yaml  config.py  fly.toml  generate_broll_xml.py  pyproject.toml  requirements.txt  wikipedia_image_downloader.py
.claude/: settings.json
.claude/agents/: image-filter-reviewer.md  test-writer.md
.claude/skills/fixture-from-project/: SKILL.md
.claude/skills/release-notes/: SKILL.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1-MILESTONE-AUDIT.md  v1-REQUIREMENTS.md  v1-ROADMAP.md
.planning/phases/01-enrichment-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-search-strategy-generation/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-priority-based-filtering/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-disambiguation/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-image-variety-quality/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  (+3 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md  task_completion.md
docs/plans/: 2026-02-03-monorepo-architecture-exploration.md  2026-02-04-api-layer-implementation.md  2026-02-11-download-speed-improvements.md  2026-03-01-retry-failed-downloads.md  2026-04-18-candidate-stacking.md  2026-04-18-full-coverage-mode.md  2026-04-21-coverage-stacked-fillers.md  2026-04-21-honor-retry-after-fail-fast.md  2026-04-28-strategies-validate-resilient.md  README.md  YOUTUBE_TOOLKIT_SERVICE_SPEC.md  image-selection-pipeline.md
resolve_integration/: place_broll.lua  place_broll.py
src/: __init__.py
src/api/: __init__.py  main.py
src/cli/: __init__.py  export_openapi.py
src/core/: __init__.py  disambiguation.py  executor.py  review.py
src/models/: __init__.py  disambiguation.py  entity.py  pipeline.py
tests/: test_download_wikipedia_images.py  test_enrich_entities.py  test_executor.py  test_generate_search_strategies.py
tests/api/: test_health.py  test_pipeline_routes.py
tests/fixtures/: sample.srt
tests/integration/: test_api_e2e.py
tools/: detect_montages.py  disambiguate_entities.py  disambiguation.py  download_entities.py  download_wikipedia_images.py  enrich_entities.py  generate_markers.py  generate_search_strategies.py  generate_xml.py  merge_entities.py  srt_entities.py  srt_macro_visuals.py  srt_visual_elements.py  summarize_transcript.py
(+16 files in other folders)
